# robograph

./: .clinerules  .cursorrules  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  pyproject.toml
.antigravity/skills/robograph/: SKILL.md
robograph/: __main__.py
robograph/agent_injection/: detector.py  injector.py  registry.py  templates.py
robograph/agents/: __init__.py  detector.py  injector.py  registry.py  templates.py
robograph/analysis/: community.py
robograph/analyzers/: scanner.py
robograph/api/: main.py
robograph/api/static/: index.html
robograph/cli/: main.py
robograph/exporters/: agent.py  mermaid.py
robograph/graph/: engine.py  models.py
robograph/intelligence/: explainer.py
robograph/mcp/: server.py
robograph/parsers/cpp/: cpp_analyzer.py
robograph/parsers/python/: launch_analyzer.py  ros2_analyzer.py
robograph/parsers/ros2/: launch_analyzer.py  ros2_analyzer.py
