[tool.poetry]
name = "robograph"
version = "0.1.0"
description = "AI-first codebase indexing and architecture mapping system for robotics & large software projects."
authors = ["Abhishek <abhi@example.com>"]
readme = "README.md"
packages = [{include = "robograph"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
typer = "^0.12.3"
fastapi = "*"
uvicorn = ">=0.31.1"
networkx = "^3.3"
tree-sitter = "^0.22.3"
tree-sitter-cpp = "^0.22.0"
pydantic = "^2.7.4"
mcp = "^1.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.13.2"

[tool.poetry.scripts]
robograph = "robograph.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
